--- a/HeatApp/appsettings.json
+++ b/HeatApp/appsettings.json
@@ -1,21 +1,26 @@
 {
   "ConnectionStrings": {
-    "MySql": "Server=localhost;Database=db;Uid=user;Pwd=pass;"
+    "MySql": "Server=localhost;Database=user;Uid=heating;Pwd=pass;"
   },
   "MqttClient": {
     "UseMqttClient": true,
-    "ServerAddress": "host",
+    "ServerAddress": "localhost",
     "ServerPort": 1883,
     "ClientId": "HomeServer",
     "User": "user",
-    "Password": "pass"
+    "Password": "pass",
+    "ValvesEnabled": true,
+    "ValvesTopic": "/heating/valves"
   },
   //Nefrci zatim
-  "MqttServer": {
-    "UseMqttServer": false
-  },
+  //"MqttServer": {
+  //  "UseMqttServer": false,
+  //  "ServerPort": 1883,
+  //  "User": "heating",
+  //  "Password": "heating"
+  //},
   "Serial": {
-    "UseSerial":true,
+    "UseSerial": false,
     "Port": "/dev/ttyUSB0"
   },
   "Logging": {
@@ -24,7 +29,8 @@
     }
   },
   "BoilerUnit": {
-    "UseBoiler": false
+    "UseBoiler": true,
+    "BoilerTopic": "/heating/boiler"
   },
   "AllowedHosts": "*"
 }
